--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,71 @@
-.hello {
-  color: red;
+/* stylelint-disable csstree/validator */
+/* stylelint-disable unit-no-unknown */
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-weight: 100;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: transparent;
+}
+
+body {
+  height: 100%;
+}
+
+.home__list {
+  width: fit-content;
+  display: grid;
+  grid-gap: calc(1dvw + 0.6rem);
+  margin: calc(1dvw + 0.6rem);
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.home__pokemon {
+  display: flex;
+  justify-content: center;
+}
+
+.list__pokemon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid black 2px;
+}
+
+.pokemon__heart-icon {
+  width: calc(1dvw + 1rem);
+}
+
+.pokemon__image {
+  width: max(10dvw, 200px);
+  padding: calc(1dvw + 0.6rem);
+}
+
+.pokemon__info-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pokemon__icon-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 1dvw;
+}
+
+.pokemon__button {
+  width: fit-content;
+  margin: calc(0.3dvw + 0.7rem);
+  padding: calc(0.3dvw + 0.5rem);
+  border: solid black;
+  border-radius: calc(0.3dvw + 0.7rem);
+}
+
+.reservation {
+  margin-top: 0;
 }
