solve linter issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 /* stylelint-disable csstree/validator */
 /* stylelint-disable unit-no-unknown */
+/* stylelint-disable function-calc-no-invalid */
 * {
   padding: 0;
   margin: 0;
